# Maira

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ANALYSIS.md  BACKLOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml
.claude/: settings.json  settings.local.json
.claude/commands/: maira-backend.md  maira-daryl.md  maira-database.md  maira-deanna.md  maira-docker.md  maira-eugene.md  maira-frontend.md  maira-hershel.md  maira-milton.md  maira-rick.md  maira-security.md  maira-testing.md
.github/: commit-message-template.txt  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  uptime.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_rls.py
backend/scripts/: seed.py
backend/src/: config.py  main.py
backend/src/api/: auth.py  health.py  protectora.py
backend/src/core/: auth.py  exceptions.py  logging.py  middleware.py  ratelimit.py
backend/src/db/: session.py
backend/src/models/: __init__.py  base.py  protectora.py  usuario.py
backend/src/schemas/: auth.py  protectora.py
backend/src/services/: supabase_admin.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_db.py  test_health.py  test_models.py  test_protectora.py  test_signup.py  utils.py
docker/backend/: Dockerfile
docs/: index.md
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
scripts/: render_planning.py
(+55 files in other folders)
